ajustado bug no build do projeto